modifique el index

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prueba</title>
+    <title>Githib pages</title>
 </head>
 <body>
-    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, officiis amet deleniti soluta est, praesentium voluptate delectus maxime consequuntur sapiente animi voluptates cum, dolores quo temporibus explicabo autem consectetur. Nesciunt.</h2>
+    <h1>Mi pagina funcionando con githubpage.</h1>
 </body>
 </html>
